--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "quasar": "^2.6.0",
     "serve": "^14.2.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.3.0",
