--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "task": "node -r ts-node/register -r tsconfig-paths/register  ./src/tasks/move-sections-to-new-sections.task.ts",
+    "task": "node dist/tasks/move-sections-to-new-sections.task.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
