--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@fullstory/browser": "^2.0.5",
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
     "dotenv": "^16.4.1",
